# arching-kaos-tools

./: .gitignore  AKFS  CHANGELOG  ContainerFile  Doxyfile  INSTALL  LICENSE  MODULES  Makefile  NETWORKING  NETWORKING.md  README  README.md  REQUIREMENTS  SUPPORT  TUTORIAL  cjdns-full-installer.sh  config.sh  enter  full_test_with_podman.sh  gen-changelog.sh  getlatest.sh  init.sh  install.sh  ipfs-check-install-setup-init-update  ipfs-starter  news  pack_z_block  test_with_podman.sh  tidy_history.sh  uninstall.sh  update.sh
api/: config.js  index.js  make_cache.sh  package.json
api/lib/akLogMessage/: index.js
api/lib/akLogThis/: index.js
api/lib/checkIfAllowedIP/: index.js
api/lib/storeIncomingIP/: index.js
api/routes/: index.js
api/routes/announceZBlock/: index.js
api/routes/announceZChain/: index.js
api/routes/default/: index.js
api/routes/getAKNSKey/: index.js
api/routes/getAKNSKeyFromBase/: index.js
api/routes/getAkid/: index.js
api/routes/getChunk/: index.js
api/routes/getIPFSHash/: index.js
api/routes/getInnerIPFSContent/: index.js
api/routes/getLeaf/: index.js
api/routes/getMap/: index.js
api/routes/getMrk/: index.js
api/routes/getNodeInfo/: index.js
api/routes/getPeers/: index.js
api/routes/getRemoteNodeInfo/: index.js
api/routes/getRemotePeers/: index.js
api/routes/getSBlock/: index.js
api/routes/getSLatest/: index.js
api/routes/getTr/: index.js
api/routes/getZChain/: index.js
api/routes/getZLatest/: index.js
api/routes/getZblock/: index.js
api/routes/receiveZBlock/: index.js
api/routes/receiveZChain/: index.js
api/routes/showEntriesFile/: index.js
api/routes/showNSEntriesFile/: index.js
api/settings/: index.js
api/tests/: announce_zblock.sh  announce_zchain_link.sh  default_route.sh  gathered_zblocks.sh  gathered_zchain_zlatest_pairs.sh  get_peers.sh  latest_known_mined_block.sh  node_local_chain.sh  node_local_info.sh  node_local_zlatest.sh  send_me_a_zblock.sh  send_me_a_zchain_link.sh  show_mined_block.sh  test_all_routes.sh
api/validators/ZblockValidator/: index.js
api/validators/ZchainValidator/: index.js
c_implementation/: Makefile.am  configure.ac
c_implementation/build_tree/: ak_fs_build.sh  ak_log_build.sh  ak_logcatter_build.sh  ak_settings_build.sh  ak_utils_build.sh  libsodium_test_build.sh
c_implementation/include/: libakdatetime.h  libakfs.h  libaklog.h  libaklogcatter.h  libaksettings.h  libakutils.h
c_implementation/src/: ak_datetime.c  ak_fs.c  ak_fs_defuse.c  ak_fs_main.c  ak_fs_map_v3.c  ak_fs_maps_v3.c  ak_fs_mt.c  ak_fs_sha512sum.c  ak_log.c  ak_log_main.c  ak_settings.c  ak_utils.c  akfs.c  akfs_defuse.c  akfs_main.c  akfs_map_v3.c  akfs_map_v4.c  akfs_sha512sum.c  aklog.c  aklog_main.c  aklogcatter.c  aksettings.c
c_implementation/tests/: test_akfs.c  test_akfs_mkdir.c  test_aklog.c  test_aklogcatter.c  test_aklogwrite.c  test_aksettings.c  test_aksettings_read.c  test_akutils.c  test_sha512_string.c
lib/: _ak_checks  _ak_cjdns  _ak_coin  _ak_config  _ak_datetime  _ak_fm  _ak_fs  _ak_gpg  _ak_hash_exchange  _ak_html  _ak_ipfs  _ak_irc  _ak_lib_load  _ak_log  _ak_maintainance  _ak_network  _ak_network_cjdns  _ak_network_incoming  _ak_network_ipfs  _ak_network_stellar  _ak_network_utils  _ak_network_yggdrasil  _ak_newline  _ak_node  _ak_ns  _ak_pkg  _ak_sblock  _ak_schain  _ak_script  _ak_script_description  _ak_script_exit  _ak_settings  _ak_sh  _ak_smfiles  _ak_utils  _ak_wallet  _ak_yggdrasil  _ak_zblock  _ak_zchain  logit
modules/: ak-files  ak-todos
modules/articles/: main.sh
modules/categories/: main.sh
modules/comments/: main.sh
modules/encrypted/: lib.sh  main.sh
modules/files/: main.sh
modules/folders/: main.sh
modules/follow/: lib.sh  main.sh
modules/markdown/: lib.sh  main.sh
modules/mixtapes/: lib.sh  main.sh
modules/news/: lib.sh  main.sh
modules/reference/: main.sh
modules/repositories/: main.sh
modules/roadmap/: main.sh
modules/smfiles/: lib.sh  main.sh
modules/todos/: main.sh
podman/: ContainerFile.alpine  ContainerFile.archlinux  ContainerFile.debian  ContainerFile.fedora  ContainerFile.opensuse
src/: akfs.c  aklog.c  aklogcatter.c  aksettings.c  build.sh  new_lib.sh
src/build_tree/: ak_fs_build.sh  ak_log_build.sh  ak_logcatter_build.sh  ak_settings_build.sh
src/include/: akfs.h  aklog.h  aksettings.h
src/tests/: test_akfs.c  test_akfs_mkdir.c  test_aklog.c  test_aklogcatter.c  test_aklogwrite.c  test_aksettings.c
